# horizon

./: README.md
enclosures/bottle/: Arribada_Horizon_ARTIC_R2.step  BWL_enclosure_bottom_CNC_iss02_190919.STEP  BWL_enclosure_top_CNC_iss02_190919.STEP  SLS_3D_Printable_Bottle_Enclosure_Bottom_Battery.step  SLS_3D_Printable_Bottle_Enclosure_Top.FCStd  bottle_assembly_guide.md
firmware/: Dockerfile  Jenkinsfile
firmware/core/at/: at.c
firmware/core/aws/: aws.c
firmware/core/buffer/: buffer.c  buffer.h
firmware/core/cmd/: cmd.c  cmd.h
firmware/core/debug/: debug.c  debug.h
firmware/core/gps_scheduler/: gps_scheduler.c
firmware/core/ring_buffer/: ring_buffer.h
firmware/core/sm_iot/: sm_iot.c
firmware/core/sys_config/: sys_config.c  sys_config_priv.h
firmware/devices/axl/LSM9DS1/: LSM9DS1.c  LSM9DS1.h
firmware/devices/battery/BQ27621/: BQ27621.c
firmware/devices/flash/IS25LP128F/: IS25LP128F_SPI.c
firmware/devices/pressure/MS5803_xBA/: MS5803_xBA.h
firmware/devices/satellite/artic/: prepas.h  syshal_sat.c
firmware/docs/wavedrom/: Switch_triggered_1.json
firmware/ports/linux/syshal/: syshal_uart.c
firmware/ports/nrf52840/: CMakeLists.txt  main.c  nrf52840.code-workspace
firmware/ports/nrf52840/bootloader/: CMakeLists.txt  README.md  public_key.c
firmware/ports/nrf52840/syshal/: syshal_ble.c  syshal_firmware.c  syshal_gpio.c  syshal_led.c  syshal_pmu.c  syshal_qspi.c  syshal_time.c  syshal_usb.c
firmware/ports/stm32/: STM32F072RBTx_FLASH.ld  debugJLink.bat  debugOpenOCD.bat  main.c
firmware/ports/stm32/syshal/: syshal_firmware.c
firmware/syshal/inc/: syshal_device.h  syshal_flash.h  syshal_gpio.h  syshal_qspi.h  syshal_sat.h  syshal_time.h
firmware/tests/: build_tests.sh  run_tests.bat
firmware/tests/src/: generate_mocks.sh  test_at.cpp  test_flash.cpp  test_prepas.cpp  test_sm_iot.cpp  test_sm_main.cpp  test_sys_config.cpp  test_syshal_cellular.cpp  test_syshal_timer.cpp  test_syshal_timer_nrf52840.cpp
firmware/tests/src/certificates_error/: CelullarTestPurple.cert
firmware/tests/src/json/: test_device_status.json
firmware/tests/src/mocks/: bsp.h  nrfx_rtc.h
firmware/v3/: .gitignore  Jenkinsfile  README.md  horizon_bootloader_18a6102.hex
firmware/v3/core/at/: at.c  at.h
firmware/v3/core/aws/: aws.c
firmware/v3/core/cexception/: cexception.c  cexception.h  exceptions.h
firmware/v3/core/cmd/: cmd.h
firmware/v3/core/config/: version.h
firmware/v3/core/config_if/: config_if.c  config_if.h
firmware/v3/core/crc32/: crc_32.c  crc_32.h
firmware/v3/core/fs/: fs.c  fs.h  fs_priv.h
firmware/v3/core/iot/: iot.c  iot.h
firmware/v3/core/json/: json.c  json.h
firmware/v3/core/logging/: logging.h
firmware/v3/core/sm/: sm.c
firmware/v3/core/sm_iot/: sm_iot.c  sm_iot.h
firmware/v3/core/sm_main/: sm_main.c  sm_main.h
firmware/v3/core/sys_config/: sys_config.c  sys_config.h  sys_config_priv.h
firmware/v3/docs/wavedrom/: Scheduled_0.json  Scheduled_1.json  Switch_triggered_0.json  Switch_triggered_2.json  Switch_triggered_3.json
firmware/v3/ports/nrf52840/: Makefile  gcc_nrf52840.ld  main.c  nrf52840.code-workspace
firmware/v3/ports/stm32/: JLinkCommandFile.jlink  Makefile  stm32f0xx_hal_conf.h  stm32f0xx_hal_msp.c  system_clock.c
firmware/v3/syshal/inc/: syshal_batt.h  syshal_ble.h  syshal_button.h  syshal_cellular.h  syshal_device.h  syshal_firmware.h  syshal_flash.h  syshal_gpio.h  syshal_gps.h  syshal_led.h  syshal_pressure.h  syshal_qspi.h  syshal_rtc.h  syshal_sat.h  syshal_spi.h  syshal_switch.h  syshal_time.h  syshal_timer.h  syshal_uart.h  syshal_usb.h
firmware/v3/syshal/src/: syshal_switch.c  syshal_timer.c
firmware/v3/tests/: build_tests.bat  run_tests.bat
firmware/v3/tests/src/: CMakeLists.txt  build_gtest.sh  cmock_options.yml  generate_mocks.sh  test_at.cpp  test_aws.cpp  test_buffer.cpp  test_flash.cpp  test_fs.cpp  test_iot.cpp  test_json.cpp  test_prepas.cpp  test_ring_buffer.cpp  test_rtc.cpp  test_sm_iot.cpp  test_sm_iot_linux.cpp  test_sm_main.cpp  test_sys_config.cpp  test_syshal_cellular.cpp  test_syshal_sat.cpp  test_syshal_timer_nrf52840.cpp
firmware/v4/: .gitignore
firmware/v4/core/at/: at.h
firmware/v4/core/aws/: aws.h
firmware/v4/core/config/: version.h
firmware/v4/core/crc32/: crc_32.c  (+1 more)
firmware/v4/tests/: build_tests.bat  run_tests.sh
firmware/v4/tests/src/: CMakeLists.txt  cmock_options.yml  cmock_stubs.c  test_aws.cpp  test_fs.cpp  test_fs_script.cpp  test_gps_scheduler.cpp  test_iot.cpp  test_rtc.cpp  test_sm_iot_linux.cpp  test_syshal_sat.cpp
firmware/v4/tests/src/certificates/: README  arribada.pubkey
firmware/v4/tests/src/certificates_error/: CelullarTestPurple.key
firmware/v4/tests/src/json/: test_configuration_update.json  test_full.json
firmware/v4/tests/src/mocks/: nrfx_rtc.c
firmware/v4/tests/src/prepas/: ARTIC.PMEM  ARTIC.XMEM  ARTIC.YMEM  prepas.cfg
firmware/v4_11_0a4/: example_config.json
firmware/v4_11_0a4/arribada_tools-2.0.2/: setup.py
firmware/v4_11_1a/: example_config.json  horizon_bootloader_v1.2rc1_2fdeb6e0.hex
firmware/v4_11_1a/arribada_tools-2.0.2/: setup.py
hardware/horizon_v4_1/: Arribada TT4v1 BOM.xls  Pick Place for Arribada TT4(Arribada TT4).txt
tools/: .project  Dockerfile  MANIFEST.in  setup.py
tools/2_0_1/: Jenkinsfile  README.rst
tools/2_0_1/arribada_tools/: __init__.py  aws.py  cellular.py  config.py  interface.py  log.py  pyusb.py
tools/2_0_1/aws_sam/: README
tools/2_0_1/tests/: argos_parse  artic_bulletin_to_json  artic_mems_to_firmware_file  aws_config  ble_char  ble_char_read  ble_scan  ble_services  cellular_config  gps_cmd  log_parse  setup_ble.sh  usb_echo.py
tools/2_0_2/: PKG-INFO
tools/2_0_2/arribada_tools/: __init__.py  config.py
tools/2_0_2/arribada_tools.egg-info/: requires.txt
tools/arribada_tools/: __init__.py  argos.py  backend.py  ble.py  config.py  gps_config.py  ubx.py
tools/aws_sam/push_shadow_dynamodb/: template.yaml
tools/sample_config/: configuration_v5.json
tools/tests/: ble_auto  ble_char_write  ble_desc  gps_almanac  gps_ascii_config  gps_baud  gps_dump  tracker_config
(+722 files in other folders)
